src/app.scss
@use "@picocss/pico/scss/pico" with (
  $semantic-root-element: "#app",
  $enable-semantic-container: true,
  $modules: (
    // Theme
    "themes/default": true,

    // Layout
    "layout/document": true,
    "layout/landmarks": true,
    "layout/container": true,
    "layout/section": true,
    "layout/grid": true,
    "layout/overflow-auto": true,

    // Content
    "content/link": true,
    "content/typography": true,
    "content/embedded": true,
    "content/button": true,
    "content/table": false,
    "content/code": true,
    "content/figure": false,
    "content/miscs": true,

    // Forms
    "forms/basics": true,
    "forms/checkbox-radio-switch": true,
    "forms/input-color": false,
    "forms/input-date": false,
    "forms/input-file": false,
    "forms/input-range": false,
    "forms/input-search": false,

    // Components
    "components/accordion": false,
    "components/card": true,
    "components/dropdown": true,
    "components/group": false,
    "components/loading": false,
    "components/modal": false,
    "components/nav": false,
    "components/progress": false,
    "components/tooltip": false,

    // Utilities
    "utilities/accessibility": false,
    "utilities/reduce-motion": false,
  )
);

footer {
  text-align: center;
}

.qr-column {
  display: flex;
  flex-direction: column;
  gap: var(--pico-grid-row-gap);
}

.qr-operations {
  display: flex;
  justify-content: space-evenly;
  gap: var(--pico-grid-column-gap);
}

.qr-operations > button {
  flex: 1;
}

.lang-select {
  border: none;
}

.theme-toggle svg {
  vertical-align: -0.125em;
}

.theme-toggle:focus {
  box-shadow: none;
}

// avoid arrow appearing for styling
details summary::marker {
  display: none;
}

details summary {
  list-style: none;
}

